crates/rtd-core/src/authority/snapshots/rtd_core__authority__execution_time_estimator__tests__execution_time_observer_v126.snap
---
source: crates/rtd-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 126
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 10
          - secs: 0
            nanos: 25000000
        - - 4
          - secs: 0
            nanos: 28000000
        - - 7
          - secs: 0
            nanos: 6000000
        - - 2
          - secs: 0
            nanos: 19000000
      stake_weighted_median:
        secs: 0
        nanos: 25000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 1
          - secs: 0
            nanos: 21000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 9
          - secs: 0
            nanos: 43000000
      stake_weighted_median:
        secs: 0
        nanos: 43000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 54000000
        - - 7
          - secs: 0
            nanos: 59000000
      stake_weighted_median:
        secs: 0
        nanos: 59000000
  - - TransferObjects
    - observations:
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 19000000
        - - 1
          - secs: 0
            nanos: 33000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 33000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 672000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 10
          - secs: 0
            nanos: 250000000
      stake_weighted_median:
        secs: 0
        nanos: 672000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 6
          - secs: 0
            nanos: 407000000
        - - 0
          - ~
        - - 2
          - secs: 0
            nanos: 142000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 407000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 675000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 320000000
  - - transfer_objects_5_items
    - secs: 0
      nanos: 198000000
  - - split_coins_1_amounts
    - secs: 0
      nanos: 118000000
  - - merge_coins_1_sources
    - secs: 0
      nanos: 86000000
  - - make_move_vec_5_elements
    - secs: 0
      nanos: 150000000
  - - mixed_commands
    - secs: 0
      nanos: 218000000
  - - upgrade_package
    - secs: 0
      nanos: 672000000
