crates/rtd-core/src/authority/snapshots/rtd_core__authority__execution_time_estimator__tests__execution_time_observer_v132.snap
---
source: crates/rtd-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 132
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 10
          - secs: 0
            nanos: 18000000
        - - 7
          - secs: 0
            nanos: 8000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 19000000
  - - MergeCoins
    - observations:
        - - 10
          - secs: 0
            nanos: 67000000
        - - 6
          - secs: 0
            nanos: 68000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 9
          - secs: 0
            nanos: 70000000
      stake_weighted_median:
        secs: 0
        nanos: 68000000
  - - SplitCoins
    - observations:
        - - 5
          - secs: 0
            nanos: 30000000
        - - 9
          - secs: 0
            nanos: 27000000
        - - 5
          - secs: 0
            nanos: 54000000
        - - 5
          - secs: 0
            nanos: 54000000
      stake_weighted_median:
        secs: 0
        nanos: 54000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 4
          - secs: 0
            nanos: 774000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 774000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 7
          - secs: 0
            nanos: 89000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 3
          - secs: 0
            nanos: 473000000
        - - 7
          - secs: 0
            nanos: 111000000
        - - 6
          - secs: 0
            nanos: 464000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 473000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 741000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 284000000
  - - transfer_objects_1_items
    - secs: 0
      nanos: 2000000
  - - split_coins_1_amounts
    - secs: 0
      nanos: 108000000
  - - merge_coins_2_sources
    - secs: 0
      nanos: 204000000
  - - make_move_vec_2_elements
    - secs: 0
      nanos: 57000000
  - - mixed_commands
    - secs: 0
      nanos: 112000000
  - - upgrade_package
    - secs: 0
      nanos: 774000000
