crates/rtd-core/src/authority/snapshots/rtd_core__authority__execution_time_estimator__tests__execution_time_observer_v134.snap
---
source: crates/rtd-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 134
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 20000000
        - - 8
          - secs: 0
            nanos: 30000000
        - - 10
          - secs: 0
            nanos: 17000000
      stake_weighted_median:
        secs: 0
        nanos: 20000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 1
          - secs: 0
            nanos: 21000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 32000000
  - - SplitCoins
    - observations:
        - - 8
          - secs: 0
            nanos: 65000000
        - - 7
          - secs: 0
            nanos: 29000000
        - - 5
          - secs: 0
            nanos: 54000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 5
          - secs: 0
            nanos: 0
        - - 0
          - ~
        - - 7
          - secs: 0
            nanos: 62000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 62000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 981000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 10
          - secs: 0
            nanos: 400000000
        - - 1
          - secs: 0
            nanos: 428000000
      stake_weighted_median:
        secs: 0
        nanos: 404000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 379000000
        - - 10
          - secs: 0
            nanos: 484000000
        - - 10
          - secs: 0
            nanos: 442000000
      stake_weighted_median:
        secs: 0
        nanos: 442000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 404000000
  - - mixed_move_calls
    - secs: 0
      nanos: 846000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 350000000
  - - transfer_objects_5_items
    - secs: 0
      nanos: 372000000
  - - split_coins_2_amounts
    - secs: 0
      nanos: 183000000
  - - merge_coins_3_sources
    - secs: 0
      nanos: 128000000
  - - make_move_vec_6_elements
    - secs: 0
      nanos: 140000000
  - - mixed_commands
    - secs: 0
      nanos: 309000000
  - - upgrade_package
    - secs: 0
      nanos: 981000000
